--- a/DavaiPosmotrim/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/DavaiPosmotrim/Resources/Base.lproj/LaunchScreen.storyboard
@@ -20,7 +20,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="d0S-ss-PZz">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="davayLabelImage" translatesAutoresizingMaskIntoConstraints="NO" id="XRI-KG-mcK">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="davayImage" translatesAutoresizingMaskIntoConstraints="NO" id="XRI-KG-mcK" userLabel="davayImage">
                                 <rect key="frame" x="169" y="741" width="200" height="45"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="QZ8-RZ-eA3"/>
@@ -46,7 +46,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="davayLabelImage" width="199.33332824707031" height="44.666667938232422"/>
+        <image name="davayImage" width="199.33332824707031" height="44.666667938232422"/>
         <image name="launchScreenBackground" width="375" height="731"/>
         <namedColor name="baseBackgroundColor">
             <color red="0.94499999284744263" green="0.95300000905990601" blue="0.97299998998641968" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
